# laser-airmove-planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
apps/qt_demo/: main.cpp
doc/: laser_airmove_planner_development_plan.md  mold_laser_single_airmove_obstacle_avoidance_dingtalk_doc.md  project_best_practices.md  project_setup_windows_vcpkg.md  qt_demo_app.md
examples/: 11.json  11.mtl  11.off  11.stl  simple_box_config.json  simple_box_rrtconnect_config.json  simple_triangle_obstacle.stl  single_airmove_demo.cpp
examples/benchmark/: 01_open_space_informed.json  02_single_box_rrtconnect.json  03_narrow_passage_rrtconnect.json  04_near_obstacle_informed.json  05_no_path_blocked.json  06_start_invalid.json  README.md
include/airmove/: AirMovePlanner.hpp  BSpline.hpp  CollisionWorld.hpp  JsonIO.hpp  RuckigExecutor.hpp  StlMeshLoader.hpp  Types.hpp
scripts/: build_with_vcpkg.sh  init_and_push_github.sh
src/: AirMovePlanner.cpp  BSpline.cpp  CollisionWorld.cpp  JsonIO.cpp  RuckigExecutor.cpp  StlMeshLoader.cpp
tests/: basic_tests.cpp
tools/: laser_airmove_benchmark.cpp  laser_airmove_plan.cpp  visualize_benchmark.py  visualize_path.py
